30-tools/logging-stack/grafana/service.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: logging
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: grafana
